<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".UI.ActivityThietBi">


    <EditText
        android:id="@+id/edit_idTB"
        style="@style/editText1" />
    <EditText
        android:id="@+id/edit_maTB"
        style="@style/editText1" />

    <LinearLayout
        style="@style/linearBt"
        android:layout_margin="5dp"
        android:layout_marginTop="5dp">

        <TextView
            style="@style/textView"
            android:layout_marginRight="17dp"
            android:text="@string/nameDevice" />

        <EditText
            android:id="@+id/edit_tenTB"
            style="@style/editText" />

    </LinearLayout>

    <LinearLayout
        style="@style/linearBt"
        android:layout_margin="5dp"
        android:layout_marginTop="5dp">

        <TextView
            style="@style/textView"
            android:layout_marginRight="40dp"
            android:text="@string/origin" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="3dp"
            android:background="@drawable/custom_spinner"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/sp_xuatXu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:gravity="center"

                android:layout_marginLeft="5dp"
                android:spinnerMode="dropdown" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:src="@drawable/arrowdropdown" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        style="@style/linearBt"
        android:layout_margin="5dp"
        android:layout_marginTop="5dp">

        <TextView
            style="@style/textView"
            android:layout_marginRight="20dp"
            android:text="@string/maThietBi" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="3dp"
            android:background="@drawable/custom_spinner"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/sp_maLoai"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:gravity="center"

                android:layout_marginLeft="5dp"
                android:spinnerMode="dropdown" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:src="@drawable/arrowdropdown" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/linearBt"
        android:layout_margin="5dp"
        android:layout_marginTop="5dp">

        <TextView
            style="@style/textView"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="30dp"
            android:text="Chọn ảnh" />
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="50dp"
            android:id="@+id/imageThietBi"
            android:layout_height="50dp"
            android:src="@drawable/choosepicture"/>
    </LinearLayout>

    <LinearLayout
        style="@style/linearBt"
        android:layout_marginTop="5dp">

        <Button
            android:id="@+id/bt_add"
            style="@style/button"
            android:drawableStart="@drawable/ic_baseline_add_circle_24"
            android:text="@string/add" />

        <Button
            android:id="@+id/bt_remove"
            style="@style/button"
            android:drawableStart="@drawable/ic_baseline_remove_circle_24"
            android:text="@string/remove" />

        <Button
            android:id="@+id/bt_update"
            style="@style/button"
            android:drawableStart="@drawable/ic_baseline_update_24"
            android:text="@string/update" />

        <Button
            android:id="@+id/bt_clear"
            style="@style/button"
            android:drawableStart="@drawable/ic_baseline_clear_all_24"
            android:text="@string/clear" />
    </LinearLayout>



    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerViewThietBi"
        style="@style/listView"
        android:layout_marginTop="5dp" />

</LinearLayout>