<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UI.ActivityLoaiThietBi">

    <TextView
        android:id="@+id/idPhongHoc"
        android:layout_width="0dp"
        android:layout_height="0dp" />

    <LinearLayout
        style="@style/linearBt"
        android:layout_margin="5dp"
        android:layout_marginTop="5dp">

        <TextView
            style="@style/textView"
            android:text="Mã Phòng" />

        <EditText
            android:id="@+id/edit_maPhong"
            style="@style/editText" />

    </LinearLayout>

    <LinearLayout
        style="@style/linearBt"
        android:layout_margin="5dp"
        android:layout_marginTop="5dp">

        <TextView
            style="@style/textView"
            android:text="Loại Phòng" />

        <EditText
            android:id="@+id/edit_loaiPhong"
            style="@style/editText" />

    </LinearLayout>

    <LinearLayout
        style="@style/linearBt"
        android:layout_margin="5dp"
        android:layout_marginTop="5dp">

        <TextView
            style="@style/textView"
            android:text="Tầng" />

        <EditText
            android:id="@+id/edit_tang"
            style="@style/editText"
            android:layout_marginStart="35sp"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        style="@style/linearBt"
        android:layout_margin="5dp"
        android:layout_marginTop="5dp">

        <TextView
            style="@style/textView"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="30dp"
            android:text="Chọn ảnh" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imagePhongHoc"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/choosepicture" />
    </LinearLayout>

    <LinearLayout
        style="@style/linearBt"
        android:layout_marginTop="5dp">

        <Button
            android:id="@+id/bt_add"
            style="@style/button"
            android:drawableStart="@drawable/ic_baseline_add_circle_24"
            android:text="@string/add" />

        <Button
            android:id="@+id/bt_remove"
            style="@style/button"
            android:drawableStart="@drawable/ic_baseline_remove_circle_24"
            android:text="@string/remove" />

        <Button
            android:id="@+id/bt_update"
            style="@style/button"
            android:drawableStart="@drawable/ic_baseline_update_24"
            android:text="@string/update" />

        <Button
            android:id="@+id/bt_clear"
            style="@style/button"
            android:drawableStart="@drawable/ic_baseline_clear_all_24"
            android:text="@string/clear" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/listRoom"
        style="@style/listView"
        android:layout_marginTop="5dp" />

</LinearLayout>